[gd_scene load_steps=7 format=2]

[ext_resource path="res://Reused/ReusableSystems/DDropDownList/DDropDownList.gd" type="Script" id=1]
[ext_resource path="res://Reused/ReusableSystems/DDropDownList/DropDownItem/DDIText/DDIText.tscn" type="PackedScene" id=2]
[ext_resource path="res://Resources/Image/SmallDownArrow.png" type="Texture" id=3]
[ext_resource path="res://Reused/ReusableSystems/DDropDownList/TransparentBox.tres" type="StyleBox" id=4]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 8.0
content_margin_right = 8.0
bg_color = Color( 0.486275, 0.486275, 0.486275, 0.588235 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.921569, 0.921569, 0.921569, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 8.0
content_margin_right = 8.0
bg_color = Color( 0.486275, 0.486275, 0.486275, 0.294118 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.921569, 0.921569, 0.921569, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[node name="DDropDownList" type="Control"]
anchor_top = 0.035
anchor_right = 0.156
anchor_bottom = 0.035
margin_top = -25.2
margin_right = 0.319992
margin_bottom = 24.8
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
dd_list_item_res = ExtResource( 2 )

[node name="_Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="ListContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -30.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DownArrow" type="PanelContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -30.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="DownArrow"]
margin_left = 8.0
margin_top = 1.0
margin_right = 22.0
margin_bottom = 49.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 3 )
stretch_mode = 6

[node name="OpenButton" type="Button" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 4 )
custom_styles/normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[connection signal="item_rect_changed" from="." to="." method="_on_DDropDownList_item_rect_changed"]
[connection signal="visibility_changed" from="." to="." method="_on_DDropDownList_visibility_changed"]
[connection signal="pressed" from="OpenButton" to="." method="_on_OpenButton_pressed"]
